...
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
        // セル選択時のハイライトを無効化
        selectionStyle = .none
        
        // Counterの名前
        nameLabel.accessibilityIdentifier = "CounterCellName"
        nameLabel.font = UIFont.systemFont(ofSize: 14)
        nameLabel.textAlignment = .center
        nameLabel.isHidden = true
        labelStackView.addArrangedSubview(nameLabel)
        
        // カウントした数字
        countLabel.textAlignment = .center
        countLabel.accessibilityIdentifier = "CounterOfThisCell"
        labelStackView.addArrangedSubview(countLabel)
        
        // stack viewの設定
        labelStackView.axis = .vertical
        labelStackView.alignment = .center
        labelStackView.spacing = 4
...
